[gd_scene load_steps=4 format=3 uid="uid://co84ocwm1cr62"]

[ext_resource type="Script" uid="uid://cnog5bqc3k2uk" path="res://scenes/ui/item_option.gd" id="1_64xfq"]
[ext_resource type="Theme" uid="uid://c0nrwxr7jl0j8" path="res://resources/font-only-theme.tres" id="1_tl8gv"]
[ext_resource type="Texture2D" uid="uid://da1fxspbqnp1v" path="res://assets/items_temp/1_item.png" id="3_tl8gv"]

[node name="ItemOption" type="PanelContainer" node_paths=PackedStringArray("lbl_name", "lbl_description", "lbl_level", "item_icon")]
custom_minimum_size = Vector2(280, 0)
offset_right = 280.0
offset_bottom = 96.0
theme = ExtResource("1_tl8gv")
script = ExtResource("1_64xfq")
lbl_name = NodePath("MarginContainer/VBoxContainer/Header/NameLevelContainer/lbl_name")
lbl_description = NodePath("MarginContainer/VBoxContainer/lbl_description")
lbl_level = NodePath("MarginContainer/VBoxContainer/Header/NameLevelContainer/lbl_level")
item_icon = NodePath("MarginContainer/VBoxContainer/Header/item_icon")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="item_icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_tl8gv")
expand_mode = 1
stretch_mode = 5

[node name="NameLevelContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="lbl_name" type="Label" parent="MarginContainer/VBoxContainer/Header/NameLevelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Item Name"

[node name="lbl_level" type="Label" parent="MarginContainer/VBoxContainer/Header/NameLevelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "LV: +1"

[node name="lbl_description" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Description of the item and what it does for your character."
autowrap_mode = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
